[package]
name = "outline-js"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
description = "WASM bindings for Outline (Literate programming tool)"
homepage = "https://github.com/oinkiguana/outline-js"
repository = "https://github.com/oinkiguana/outline-js"
license = "MIT"
exclude = ["test/*"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
outline = "0.1"
wasm-bindgen = "0.2"
