[package]
name = "outline"
version = "0.1.2"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
description = "WASM bindings for Outline (Literate programming tool)"
homepage = "https://github.com/foxfriends/outline-js"
repository = "https://github.com/foxfriends/outline-js"
license = "MIT"
exclude = ["test/*"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
outline = "0.1.2"
wasm-bindgen = "0.2"
